src/components/Thesis.css
#thesis {
    min-height: 100vh; 
    text-align: center;
    padding: 5rem 0; 
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-image: url("../assets/images/ASL.png"); 
    background-size: cover; 
    background-position: center; 
    color: white;
    margin: 0; 
    width: 100%;
    position: relative;
}

#thesis::after {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: rgba(0, 0, 0, 0.5); /* Adjust the color and opacity for the tint */
    z-index: 1;
}

#thesis > * {
    position: relative;
    z-index: 2;
}

.no-padding {
    padding-left: 0 !important;
    padding-right: 0 !important;
    margin-left: 0 !important;
    margin-right: 0 !important;
}

#thesis h2 {
    margin-bottom: 1.5rem;
}

#thesis p {
    font-size: 1.25rem;
    max-width: 900px; 
}

